--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,6 +129,15 @@
   background-color: #f2f0ea !important;
 }
 
+.website-width {
+  width: 80% !important;
+}
+
+.border-app-golden {
+  border: 1px solid #a99870 !important;
+  transition: all 0.5s ease-in-out !important;
+}
+
 h1 {
   font-size: 2.25rem !important;
 }
