--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,6 +133,11 @@
   width: 80% !important;
 }
 
+.website-height {
+  /* height: 800px !important; */
+  overflow: hidden;
+}
+
 .border-app-golden {
   border: 1px solid #a99870 !important;
   transition: all 0.5s ease-in-out !important;
